<resources>

    <string name="app_name">MobMKE</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_meetings">Meetings</string>
    <string name="speaker">Speaker</string>
    <string name="title">Title</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="location">Location</string>
    <string name="title_activity_meeting_detail">Meeting Detail</string>

</resources>